use pd.to_datetime for dataframe

--- a/docs/examples/MarrmotM14.ipynb
+++ b/docs/examples/MarrmotM14.ipynb
@@ -337,7 +337,7 @@
    "source": [
     "# Store the output in a dataframe\n",
     "simulated_discharge = pd.DataFrame(\n",
-    "    {'simulation': discharge}, index=time_range\n",
+    "    {'simulation': discharge}, index=pd.to_datetime(time_range)\n",
     ")"
    ]
   },
