use figsize in plot

--- a/docs/examples/MarrmotM14.ipynb
+++ b/docs/examples/MarrmotM14.ipynb
@@ -372,7 +372,7 @@
    ],
    "source": [
     "# Plot discharge time series\n",
-    "simulated_discharge.plot()"
+    "simulated_discharge.plot(figsize=(12, 8))"
    ]
   },
   {
