--- a/docs/examples/MarrmotM14.ipynb
+++ b/docs/examples/MarrmotM14.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "# Running MARRMoT M14 model using eWaterCycle package\n",
     "\n",
-    "This notebooks shows how to run [MARRMoT](https://github.com/wknoben/MARRMoT) M14 model using an example use-case. More information about data, configuration and installation instructions can be found in the [System setup](https://ewatercycle.readthedocs.io/en/latest/system_setup.html) in the eWaterCycle documentation."
+    "This notebooks shows how to run [MARRMoT](https://github.com/wknoben/MARRMoT) M14 model using an example use-case. More information about data, configuration and installation instructions can be found in the [System setup](https://ewatercycle.readthedocs.io/en/latest/system_setup.html) in the eWaterCycle documentation. To download the example forcing file, see this [instruction](https://ewatercycle.readthedocs.io/en/latest/system_setup.html#download-example-forcing)."
    ]
   },
   {
