revise comments and headers, re-run notebooks

--- a/docs/examples/MarrmotM01.ipynb
+++ b/docs/examples/MarrmotM01.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "# Running MARRMoT M01 model using eWaterCycle package\n",
     "\n",
-    "This notebooks shows how to run [MARRMoT](https://github.com/wknoben/MARRMoT) M01 model using an example use-case. More information about data, configuration and installation instructions can be found in the [System setup](https://ewatercycle.readthedocs.io/en/latest/system_setup.html) in the eWaterCycle documentation. To download the example forcing file, see this [instruction](https://ewatercycle.readthedocs.io/en/latest/system_setup.html#download-example-forcing)."
+    "This notebooks shows how to run [MARRMoT](https://github.com/wknoben/MARRMoT) M01 model using an example use-case. More information about data, configuration and installation instructions can be found in the [System setup](https://ewatercycle.readthedocs.io/en/latest/system_setup.html) in the eWaterCycle documentation."
    ]
   },
   {
@@ -35,10 +35,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1512ddba-697d-40e7-86f4-1eeb101ab1e4",
+   "id": "dc3fc23b-7348-4653-9b13-b167d95de63b",
    "metadata": {},
    "source": [
     "## Load forcing data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "69e05c2a-7523-4430-8f59-8f3cda151126",
+   "metadata": {},
+   "source": [
+    "To download the example forcing file `BMI_testcase_m01_BuffaloRiver_TN_USA.mat`, see this [instruction](https://ewatercycle.readthedocs.io/en/latest/system_setup.html#download-example-forcing)."
    ]
   },
   {
@@ -74,10 +82,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e70f071",
+   "id": "64ab0b47-8427-49b0-b538-880df355fe9a",
    "metadata": {},
    "source": [
-    "## Setting up the model"
+    "## Set up the model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d878032b-b5e9-4efd-8864-6cbaeb2283fa",
+   "metadata": {},
+   "source": [
+    "To create the model object, we need to select a version."
    ]
   },
   {
@@ -98,7 +114,6 @@
     }
    ],
    "source": [
-    "# Get available versions\n",
     "ewatercycle.models.MarrmotM01.available_versions"
    ]
   },
@@ -129,7 +144,6 @@
     }
    ],
    "source": [
-    "# Make the model object \n",
     "model = ewatercycle.models.MarrmotM01(version='2020.11', forcing=forcing)\n",
     "print(model)"
    ]
@@ -157,26 +171,32 @@
     }
    ],
    "source": [
-    "# Show model parameters\n",
     "model.parameters"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "01074725-c35e-4c33-833a-c0c7b60b02de",
+   "metadata": {},
+   "source": [
+    "Change one of the model parameters and end time using setup() function:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "da8985a5-680c-454a-b8cd-0e0839126152",
+   "id": "0203d607-b226-4e1a-91f0-9904ee20e80e",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/sarah/GitHub/ewatercycle/docs/examples/marrmot_20210712_092627\n"
+      "/home/sarah/GitHub/ewatercycle/docs/examples/marrmot_20210712_094929\n"
      ]
     }
    ],
    "source": [
-    "# Change one of the model parameters and end time using setup() function\n",
     "cfg_file, cfg_dir = model.setup(\n",
     "    maximum_soil_moisture_storage=12.0,\n",
     "    end_time = \"1989-02-01T00:00:00Z\",\n",
@@ -207,18 +227,24 @@
     }
    ],
    "source": [
-    "# Show model parameters that are changed in the previous cell \n",
     "model.parameters"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c5a9efc0-1f52-4b43-97dc-971e1e2a8ed7",
+   "metadata": {},
+   "source": [
+    "Initialize the model with config file and get model variable names, only `flux_out_Q` is supported for now."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "97324198",
+   "id": "e7df84f4-2e21-46df-b4f9-5c8041f149bd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Initialize the model with config file\n",
     "model.initialize(cfg_file)"
    ]
   },
@@ -249,14 +275,21 @@
     }
    ],
    "source": [
-    "# Show model variable names, only 'flux_out_Q' is supported for now.\n",
     "model.output_var_names"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6199e360-cfff-4938-872e-42153a1db726",
+   "metadata": {},
+   "source": [
+    "## Run the model"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "499341fa-8867-4adb-aba0-0b5143034a0c",
+   "execution_count": 10,
+   "id": "5a4a1100-6525-4b40-b5e7-05704aa71183",
    "metadata": {},
    "outputs": [
     {
@@ -298,29 +331,42 @@
     }
    ],
    "source": [
-    "# Get model output\n",
     "discharge = []\n",
     "time_range = []\n",
     "end_time = model.end_time\n",
     "\n",
-    "# Perform all timesteps of the model, update output fields\n",
     "while (model.time < end_time):\n",
     "    model.update()\n",
-    "    # Store model time and variable output\n",
     "    discharge.append(model.get_value('flux_out_Q')[0])\n",
     "    time_range.append(model.time_as_datetime.date())\n",
-    "    print(model.time_as_isostr)\n",
-    "    "
+    "    print(model.time_as_isostr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "4e1498cf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.finalize()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "daf1a497-d518-45a4-bbdb-13bba73e473d",
+   "metadata": {},
+   "source": [
+    "## Inspect the results"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "6949e73b-849f-4d7f-8492-5f56f40d57a3",
+   "id": "54456afd-d988-4fd7-a35a-5b7272c55b3b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Store the output in a dataframe\n",
     "simulated_discharge = pd.DataFrame(\n",
     "    {'simulation': discharge}, index=pd.to_datetime(time_range)\n",
     ")"
@@ -328,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "f6981e3b-d323-4491-89a4-04503840182e",
    "metadata": {},
    "outputs": [
@@ -338,7 +384,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -356,28 +402,8 @@
     }
    ],
    "source": [
-    "# Plot discharge time series\n",
     "simulated_discharge.plot(figsize=(12, 8))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "4e1498cf",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Finalize the model\n",
-    "model.finalize()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dd987d90",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
