a minor change on text

--- a/docs/examples/MarrmotM01.ipynb
+++ b/docs/examples/MarrmotM01.ipynb
@@ -179,7 +179,7 @@
    "id": "01074725-c35e-4c33-833a-c0c7b60b02de",
    "metadata": {},
    "source": [
-    "Change one of the model parameters and end time using setup() function:"
+    "Change one of the model parameters and end time using `setup()` function:"
    ]
   },
   {
