--- a/docs/examples/MarrmotM14.ipynb
+++ b/docs/examples/MarrmotM14.ipynb
@@ -5,7 +5,7 @@
    "id": "e147b561-54da-48dd-bce2-90da2f202391",
    "metadata": {},
    "source": [
-    "![image](https://www.ewatercycle.org/assets/logo.png)"
+    "![image](https://github.com/eWaterCycle/ewatercycle/blob/main/docs/examples/logo.png)"
    ]
   },
   {
@@ -188,7 +188,7 @@
    "id": "52021da8-cf13-4bc4-8cfb-2d696aabb7db",
    "metadata": {},
    "source": [
-    "Change one of the model parameters and end time using setup() function:"
+    "Change one of the model parameters and end time using `setup()` function:"
    ]
   },
   {
