Some polishing to wflow example notebook

--- a/docs/examples/wflow.ipynb
+++ b/docs/examples/wflow.ipynb
@@ -5,7 +5,11 @@
    "id": "5882ae11",
    "metadata": {},
    "source": [
-    "# Running Wflow using the ewatercycle system"
+    "![image](https://www.ewatercycle.org/assets/logo.png)\n",
+    "\n",
+    "# Running Wflow using the ewatercycle system\n",
+    "\n",
+    "// TODO add intro and link to system setup\n"
    ]
   },
   {
@@ -28,67 +32,8 @@
     }
    ],
    "source": [
-    "import ewatercycle\n",
     "import ewatercycle.models\n",
     "import ewatercycle.parameter_sets"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "65d449aa",
-   "metadata": {},
-   "source": [
-    "### 1. Copy an example case\n",
-    "To run WFlow, we need a complete parameterset. The package can download a example parameter set for you."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "b76c6561",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ewatercycle.CFG['container_engine'] = \"docker\"\n",
-    "ewatercycle.CFG['output_dir'] = \"./\"\n",
-    "ewatercycle.CFG['ewatercycle_config'] = './ewatercycle.yaml'\n",
-    "ewatercycle.CFG['parameterset_dir'] = './parameter-sets'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "275bee95",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Directory /home/peter/ewatercycle/ewatercycle/docs/examples/parameter-sets/wflow_rhine_sbm_nc for parameter set wflow_rhine_sbm_nc already exists, skipping download.\n",
-      "Adding parameterset wflow_rhine_sbm_nc to ewatercycle.CFG... \n",
-      "Directory /home/peter/ewatercycle/ewatercycle/docs/examples/parameter-sets/pcrglobwb_example_case for parameter set pcrglobwb_example_case already exists, skipping download.\n",
-      "Adding parameterset pcrglobwb_example_case to ewatercycle.CFG... \n",
-      "Directory /home/peter/ewatercycle/ewatercycle/docs/examples/parameter-sets/lisflood_fraser for parameter set lisflood_fraser already exists, skipping download.\n",
-      "Adding parameterset lisflood_fraser to ewatercycle.CFG... \n",
-      "3 example parameter sets were downloaded\n",
-      "Config written to /home/peter/ewatercycle/ewatercycle/docs/examples/ewatercycle.yaml\n",
-      "Saved parameter sets to configuration file /home/peter/ewatercycle/ewatercycle/docs/examples/ewatercycle.yaml\n"
-     ]
-    }
-   ],
-   "source": [
-    "ewatercycle.parameter_sets.download_example_parameter_sets()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "3b48de48",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ewatercycle.CFG.reload()"
    ]
   },
   {
@@ -119,32 +64,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "74f8e69c",
-   "metadata": {},
-   "source": [
-    "### 2. Verify your configuration settings\n",
-    "\n",
-    "If you are working on a curated environment like https://lab.ewatercycle.org/, the default configuration should cover 90% of all use cases. However, for the other 10% here is a brief explanation of the relevant configuration settings. \n",
-    "\n",
-    "The ewatercycle configuration file is typcially stored in `~/ewatercycle/ewatercycle.yaml` or `/etc/ewatercycle.yaml` and can be imported with `from ewatercycle import CFG`. Relevant settings for WFLow are:\n",
-    "\n",
-    "```Yaml\n",
-    "container_engine: docker # or singularity\n",
-    "output_dir: './' # the directory where the model work_dir will be created\n",
-    "```\n",
-    "\n",
-    "In order for this to work, you need to make sure that the actual docker or singularity images are available on the system. This can be done with:\n",
-    "\n",
-    "- Docker: `docker pull ewatercycle/wflow-grpc4bmi:latest`\n",
-    "- Singularity: `singularity run docker://ewatercycle/wflow-grpc4bmi:latest` --> this will store a cached image."
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "7139ff04",
    "metadata": {},
    "source": [
-    "### 3. Setting up the model"
+    "## Setting up the model"
    ]
   },
   {
@@ -194,8 +117,7 @@
     }
    ],
    "source": [
-    "# Load forcing data from an external source\n",
-    "import ewatercycle.forcing\n",
+    "\n",
     "forcing = ewatercycle.forcing.load_foreign(\n",
     "    directory = \"./parameter-sets/wflow_rhine_sbm_nc\",\n",
     "    target_model = 'wflow',\n",
@@ -210,6 +132,16 @@
     "    )\n",
     ")\n",
     "print(forcing)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create the model instance\n",
+    "model = ewatercycle.models.Wflow(version='2020.1.1', parameter_set=parameter_set, forcing=forcing)"
    ]
   },
   {
@@ -230,8 +162,7 @@
     }
    ],
    "source": [
-    "# Create the model instance and inspect the pre-configured parameters\n",
-    "model = ewatercycle.models.Wflow(version='2020.1.1', parameter_set=parameter_set, forcing=forcing)\n",
+    "# inspect the pre-configured parameters\n",
     "model.parameters"
    ]
   },
@@ -274,7 +205,7 @@
    "id": "2c3dfe54",
    "metadata": {},
    "source": [
-    "#### Update the config file\n",
+    "### Update the config file\n",
     "\n",
     "At this point, we have a preliminary configuration file. You can open it and modify. For the example below, you will have to add the variable \"RiverRunoff\" to the API section:\n",
     "\n",
@@ -291,7 +222,7 @@
    "id": "9f30340b",
    "metadata": {},
    "source": [
-    "### 4. Running the model"
+    "## Running the model"
    ]
   },
   {
@@ -302,7 +233,7 @@
    "outputs": [],
    "source": [
     "# Initialize the model\n",
-    "model.initialize(str(cfg_file))  # This conversion to string shouldn't be necessary"
+    "model.initialize(cfg_file)  # This conversion to string shouldn't be necessary"
    ]
   },
   {
@@ -871,7 +802,7 @@
    "source": [
     "# Run the model until complete\n",
     "while model.time < model.end_time:\n",
-    "    print(model.time)\n",
+    "    print(model.time_as_isostr)\n",
     "    model.update()"
    ]
   },
