revise comments of the setup as Stefan suggested

--- a/docs/examples/MarrmotM01.ipynb
+++ b/docs/examples/MarrmotM01.ipynb
@@ -179,7 +179,7 @@
    "id": "01074725-c35e-4c33-833a-c0c7b60b02de",
    "metadata": {},
    "source": [
-    "Change one of the model parameters and end time using `setup()` function:"
+    "Setup model with maximum soil moisture storage of 12.0 instead of 10.0 and an earlier end time, making total model time just 1 month."
    ]
   },
   {
