--- a/docs/examples/MarrmotM14.ipynb
+++ b/docs/examples/MarrmotM14.ipynb
@@ -188,7 +188,7 @@
    "id": "52021da8-cf13-4bc4-8cfb-2d696aabb7db",
    "metadata": {},
    "source": [
-    "Change one of the model parameters and end time using `setup()` function:"
+    "Setup model with maximum soil moisture storage of 12.0 instead of 10.0 and an earlier end time, making total model time just 1 month."
    ]
   },
   {
