--- a/docs/examples/MarrmotM01.ipynb
+++ b/docs/examples/MarrmotM01.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "2a72501c-8a4a-4570-b9bc-39c52dd7e039",
    "metadata": {},
    "outputs": [],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "13fa0a78",
    "metadata": {},
    "outputs": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "5357dd6e",
    "metadata": {},
    "outputs": [
@@ -108,7 +108,7 @@
        "('2020.11',)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "a23331dc",
    "metadata": {},
    "outputs": [
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "1304fc91",
    "metadata": {},
    "outputs": [
@@ -165,7 +165,7 @@
        " ('end time', '1992-12-31T00:00:00Z')]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "0203d607-b226-4e1a-91f0-9904ee20e80e",
    "metadata": {},
    "outputs": [
@@ -192,7 +192,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/sarah/GitHub/ewatercycle/docs/examples/marrmot_20210712_094929\n"
+      "/home/sarah/GitHub/ewatercycle/docs/examples/marrmot_20210712_134727/marrmot-m01_config.mat\n",
+      "/home/sarah/GitHub/ewatercycle/docs/examples/marrmot_20210712_134727\n"
      ]
     }
    ],
@@ -201,6 +202,7 @@
     "    maximum_soil_moisture_storage=12.0,\n",
     "    end_time = \"1989-02-01T00:00:00Z\",\n",
     ")\n",
+    "print(cfg_file)\n",
     "print(cfg_dir)"
    ]
   },
