--- a/docs/examples/MarrmotM14.ipynb
+++ b/docs/examples/MarrmotM14.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "2a07ee36-bf51-46ab-bc5b-bffd6255d3ec",
    "metadata": {},
    "outputs": [],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "c03cabb6-9cb3-4da3-ac96-732ba870d460",
    "metadata": {},
    "outputs": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "a46d2892",
    "metadata": {},
    "outputs": [
@@ -108,7 +108,7 @@
        "('2020.11',)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "c4bcdad8",
    "metadata": {},
    "outputs": [
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "4185acc3",
    "metadata": {},
    "outputs": [
@@ -174,7 +174,7 @@
        " ('end time', '1992-12-31T00:00:00Z')]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "96106fc9-c0f2-4b36-ab91-f7d0475ed864",
    "metadata": {},
    "outputs": [
@@ -201,7 +201,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/sarah/GitHub/ewatercycle/docs/examples/marrmot_20210712_095012\n"
+      "/home/sarah/GitHub/ewatercycle/docs/examples/marrmot_20210712_134756/marrmot-m14_config.mat\n",
+      "/home/sarah/GitHub/ewatercycle/docs/examples/marrmot_20210712_134756\n"
      ]
     }
    ],
@@ -210,12 +211,13 @@
     "    maximum_soil_moisture_storage=12.0,\n",
     "    end_time = \"1989-02-01T00:00:00Z\",\n",
     ")\n",
+    "print(cfg_file)\n",
     "print(cfg_dir)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "925fd7bd",
    "metadata": {},
    "outputs": [
@@ -237,7 +239,7 @@
        " ('end time', '1989-02-01T00:00:00Z')]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "f82a877b-e0b2-428a-a523-f04c560176de",
    "metadata": {},
    "outputs": [],
