remove and in markdown cell

--- a/docs/examples/MarrmotM01.ipynb
+++ b/docs/examples/MarrmotM01.ipynb
@@ -234,10 +234,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c5a9efc0-1f52-4b43-97dc-971e1e2a8ed7",
+   "id": "c97db27e-32c3-4168-9e1d-62b756955619",
    "metadata": {},
    "source": [
-    "Initialize the model with config file and get model variable names, only `flux_out_Q` is supported for now."
+    "Initialize the model with the config file:"
    ]
   },
   {
@@ -248,6 +248,14 @@
    "outputs": [],
    "source": [
     "model.initialize(cfg_file)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "22b46626-fce3-4e84-9dd0-0f464e842209",
+   "metadata": {},
+   "source": [
+    "Get model variable names, only `flux_out_Q` is supported for now."
    ]
   },
   {
