--- a/docs/examples/MarrmotM14.ipynb
+++ b/docs/examples/MarrmotM14.ipynb
@@ -250,10 +250,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "71941c46-e72f-4d89-85f2-efbec6e9db12",
+   "id": "923536ae-b089-4b43-935b-71ecb074aa0d",
    "metadata": {},
    "source": [
-    "Initialize the model with config file and get model variable names, only `flux_out_Q` is supported for now."
+    "Initialize the model with the config file:"
    ]
   },
   {
@@ -264,6 +264,14 @@
    "outputs": [],
    "source": [
     "model.initialize(cfg_file)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0fd020b6-816f-4a99-b969-2616ab41ef13",
+   "metadata": {},
+   "source": [
+    "Get model variable names, only `flux_out_Q` is supported for now."
    ]
   },
   {
