fix link of logo

--- a/docs/examples/generate_forcing.ipynb
+++ b/docs/examples/generate_forcing.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![image](https://www.ewatercycle.org/assets/logo.png)"
+    "![image](https://github.com/eWaterCycle/ewatercycle/raw/main/docs/examples/logo.png)"
    ]
   },
   {
