Add [API] section and RiverRunoff option when missing in parameter set config file
Fixes #132

Also ran black on tests/models/test_wflow.py

--- a/docs/examples/wflow.ipynb
+++ b/docs/examples/wflow.ipynb
@@ -21,6 +21,8 @@
    "source": [
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\", category=UserWarning)\n",
+    "import logging\n",
+    "logging.basicConfig(level=logging.WARN)\n",
     "\n",
     "import ewatercycle.forcing\n",
     "import ewatercycle.models\n",
@@ -139,7 +141,16 @@
    "execution_count": 5,
    "id": "c008d891",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:ewatercycle.models.wflow:Config file from parameter set is missing API section, adding section\n",
+      "WARNING:ewatercycle.models.wflow:Config file from parameter set is missing RiverRunoff option in API section, added it with value '2, m/s option'\n"
+     ]
+    }
+   ],
    "source": [
     "model = ewatercycle.models.Wflow(version='2020.1.1', parameter_set=parameter_set, forcing=forcing)"
    ]
@@ -154,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "d3aaa50a",
    "metadata": {},
    "outputs": [
@@ -164,7 +175,7 @@
        "[('start_time', '1991-01-01T00:00:00Z'), ('end_time', '1991-12-31T00:00:00Z')]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "7eb7c504",
    "metadata": {
     "tags": []
@@ -187,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "7fc12d14",
    "metadata": {},
    "outputs": [
@@ -195,8 +206,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/verhoes/git/eWaterCycle/ewatercycle/docs/examples/output/wflow_20210712_140725/wflow_ewatercycle.ini\n",
-      "/home/verhoes/git/eWaterCycle/ewatercycle/docs/examples/output/wflow_20210712_140725\n"
+      "/home/verhoes/git/eWaterCycle/ewatercycle/docs/examples/output/wflow_20210712_144544/wflow_ewatercycle.ini\n",
+      "/home/verhoes/git/eWaterCycle/ewatercycle/docs/examples/output/wflow_20210712_144544\n"
      ]
     }
    ],
@@ -206,25 +217,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "2c3dfe54",
-   "metadata": {},
-   "source": [
-    "### Update the config file\n",
-    "\n",
-    "At this point, we have a preliminary configuration file (`cfg_file`). You can open it and modify. For the example below, you will have to add the variable \"RiverRunoff\" to the API section:\n",
-    "\n",
-    "```\n",
-    "[API]\n",
-    "RiverRunoff = 2, m/s\n",
-    "```\n",
-    "\n",
-    "After that, we can start up the model"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "ae2d9d7f",
    "metadata": {},
    "outputs": [],
@@ -242,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "43d6068a",
    "metadata": {},
    "outputs": [
@@ -330,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "2562be8f-91dc-4ab1-a591-eb8705882492",
    "metadata": {},
    "outputs": [
@@ -701,13 +695,13 @@
        "  * latitude   (latitude) float64 45.89 45.93 45.97 46.0 ... 51.98 52.02 52.05\n",
        "    time       object 1991-02-28 00:00:00\n",
        "Attributes:\n",
-       "    units:     m/s</pre><div class='xr-wrap' hidden><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'RiverRunoff'</div><ul class='xr-dim-list'><li><span class='xr-has-index'>latitude</span>: 169</li><li><span class='xr-has-index'>longitude</span>: 187</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-3157bd55-65bd-41fa-85bf-16e187fd5327' class='xr-array-in' type='checkbox' checked><label for='section-3157bd55-65bd-41fa-85bf-16e187fd5327' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 ... 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0</span></div><div class='xr-array-data'><pre>array([[0., 0., 0., ..., 0., 0., 0.],\n",
+       "    units:     m/s</pre><div class='xr-wrap' hidden><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'RiverRunoff'</div><ul class='xr-dim-list'><li><span class='xr-has-index'>latitude</span>: 169</li><li><span class='xr-has-index'>longitude</span>: 187</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-8b191f54-dafa-449d-aa9f-d48d6000f8b6' class='xr-array-in' type='checkbox' checked><label for='section-8b191f54-dafa-449d-aa9f-d48d6000f8b6' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 ... 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0</span></div><div class='xr-array-data'><pre>array([[0., 0., 0., ..., 0., 0., 0.],\n",
        "       [0., 0., 0., ..., 0., 0., 0.],\n",
        "       [0., 0., 0., ..., 0., 0., 0.],\n",
        "       ...,\n",
        "       [0., 0., 0., ..., 0., 0., 0.],\n",
        "       [0., 0., 0., ..., 0., 0., 0.],\n",
-       "       [0., 0., 0., ..., 0., 0., 0.]])</pre></div></div></li><li class='xr-section-item'><input id='section-5fd5bb8d-2f4c-44d0-9520-0161d5a85d94' class='xr-section-summary-in' type='checkbox'  checked><label for='section-5fd5bb8d-2f4c-44d0-9520-0161d5a85d94' class='xr-section-summary' >Coordinates: <span>(3)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>longitude</span></div><div class='xr-var-dims'>(longitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>5.227 5.264 5.3 ... 12.01 12.05</div><input id='attrs-e5efaf51-21d2-4854-a39d-bf21deb6029d' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-e5efaf51-21d2-4854-a39d-bf21deb6029d' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-417f8f41-6715-4c85-a833-0b4a1169071f' class='xr-var-data-in' type='checkbox'><label for='data-417f8f41-6715-4c85-a833-0b4a1169071f' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([ 5.227163,  5.26383 ,  5.300497,  5.337163,  5.37383 ,  5.410497,\n",
+       "       [0., 0., 0., ..., 0., 0., 0.]])</pre></div></div></li><li class='xr-section-item'><input id='section-7b7808ad-e350-4437-8527-901af3f2348e' class='xr-section-summary-in' type='checkbox'  checked><label for='section-7b7808ad-e350-4437-8527-901af3f2348e' class='xr-section-summary' >Coordinates: <span>(3)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>longitude</span></div><div class='xr-var-dims'>(longitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>5.227 5.264 5.3 ... 12.01 12.05</div><input id='attrs-58c36987-174f-433a-941d-28491629599b' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-58c36987-174f-433a-941d-28491629599b' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-1b9e6001-97b7-4207-aad0-ea2e4e68b6e3' class='xr-var-data-in' type='checkbox'><label for='data-1b9e6001-97b7-4207-aad0-ea2e4e68b6e3' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([ 5.227163,  5.26383 ,  5.300497,  5.337163,  5.37383 ,  5.410497,\n",
        "        5.447163,  5.48383 ,  5.520497,  5.557163,  5.59383 ,  5.630497,\n",
        "        5.667163,  5.70383 ,  5.740497,  5.777164,  5.81383 ,  5.850497,\n",
        "        5.887163,  5.92383 ,  5.960497,  5.997163,  6.03383 ,  6.070497,\n",
@@ -738,7 +732,7 @@
        "       11.387163, 11.42383 , 11.460497, 11.497164, 11.53383 , 11.570497,\n",
        "       11.607163, 11.64383 , 11.680496, 11.717163, 11.75383 , 11.790497,\n",
        "       11.827164, 11.86383 , 11.900496, 11.937163, 11.97383 , 12.010497,\n",
-       "       12.047163])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>latitude</span></div><div class='xr-var-dims'>(latitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>45.89 45.93 45.97 ... 52.02 52.05</div><input id='attrs-1206b530-353e-41d7-92e0-e6bf6364d14f' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-1206b530-353e-41d7-92e0-e6bf6364d14f' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-87b56476-5572-48e5-9149-144fb1f8d57a' class='xr-var-data-in' type='checkbox'><label for='data-87b56476-5572-48e5-9149-144fb1f8d57a' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([45.894268, 45.930935, 45.967602, 46.004265, 46.040932, 46.077599,\n",
+       "       12.047163])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>latitude</span></div><div class='xr-var-dims'>(latitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>45.89 45.93 45.97 ... 52.02 52.05</div><input id='attrs-708443fd-cf57-4b20-8417-186d68fef5e3' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-708443fd-cf57-4b20-8417-186d68fef5e3' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-f10aa212-e055-489c-80cc-9645cfa31fe0' class='xr-var-data-in' type='checkbox'><label for='data-f10aa212-e055-489c-80cc-9645cfa31fe0' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([45.894268, 45.930935, 45.967602, 46.004265, 46.040932, 46.077599,\n",
        "       46.114265, 46.150932, 46.187599, 46.224266, 46.260933, 46.2976  ,\n",
        "       46.334267, 46.370934, 46.4076  , 46.444267, 46.480934, 46.517601,\n",
        "       46.554268, 46.590935, 46.627602, 46.664268, 46.700932, 46.737598,\n",
@@ -766,7 +760,7 @@
        "       51.394268, 51.430935, 51.467602, 51.504265, 51.540932, 51.577599,\n",
        "       51.614265, 51.650932, 51.687599, 51.724266, 51.760933, 51.7976  ,\n",
        "       51.834267, 51.870934, 51.9076  , 51.944267, 51.980934, 52.017601,\n",
-       "       52.054268])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span>time</span></div><div class='xr-var-dims'>()</div><div class='xr-var-dtype'>object</div><div class='xr-var-preview xr-preview'>1991-02-28 00:00:00</div><input id='attrs-dc8d9f43-616f-4122-ba77-eec2c9e9f97a' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-dc8d9f43-616f-4122-ba77-eec2c9e9f97a' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-e04f2ffc-319b-407d-8168-6cdbb526530c' class='xr-var-data-in' type='checkbox'><label for='data-e04f2ffc-319b-407d-8168-6cdbb526530c' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array(cftime.DatetimeGregorian(1991, 2, 28, 0, 0, 0, 0), dtype=object)</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-fe215dfb-10a6-4e0e-9b19-7b9a5939359e' class='xr-section-summary-in' type='checkbox'  checked><label for='section-fe215dfb-10a6-4e0e-9b19-7b9a5939359e' class='xr-section-summary' >Attributes: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'><dt><span>units :</span></dt><dd> m/s</dd></dl></div></li></ul></div></div>"
+       "       52.054268])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span>time</span></div><div class='xr-var-dims'>()</div><div class='xr-var-dtype'>object</div><div class='xr-var-preview xr-preview'>1991-02-28 00:00:00</div><input id='attrs-10a325a1-7777-4893-bced-75b8b5a67db7' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-10a325a1-7777-4893-bced-75b8b5a67db7' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-c804ffb3-2be0-4720-a129-622572c77183' class='xr-var-data-in' type='checkbox'><label for='data-c804ffb3-2be0-4720-a129-622572c77183' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array(cftime.DatetimeGregorian(1991, 2, 28, 0, 0, 0, 0), dtype=object)</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-02a9c684-44d9-4dc6-b718-ceabd6047edc' class='xr-section-summary-in' type='checkbox'  checked><label for='section-02a9c684-44d9-4dc6-b718-ceabd6047edc' class='xr-section-summary' >Attributes: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'><dt><span>units :</span></dt><dd> m/s</dd></dl></div></li></ul></div></div>"
       ],
       "text/plain": [
        "<xarray.DataArray 'RiverRunoff' (latitude: 169, longitude: 187)>\n",
@@ -785,7 +779,7 @@
        "    units:     m/s"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -797,17 +791,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "0ab4b6d8-0443-40c9-b8cd-620e334862c4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x7fad7d53f640>"
+       "<matplotlib.collections.PathCollection at 0x7f64598ff0a0>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -844,7 +838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "36a35866-cbdc-4762-8edb-9ab9081794fd",
    "metadata": {},
    "outputs": [
@@ -854,7 +848,7 @@
        "array([200.80599976,  44.62182236,   0.        ])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -865,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "ce111800",
    "metadata": {},
    "outputs": [],
