--- a/docs/examples/generate_forcing.ipynb
+++ b/docs/examples/generate_forcing.ipynb
@@ -33,7 +33,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## LISFLOOD: generate forcing"
+    "## LISFLOOD\n",
+    "\n",
+    "### Generate forcing"
    ]
   },
   {
@@ -189,7 +191,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## LISFLOOD: plot forcing"
+    "### Plot forcing"
    ]
   },
   {
@@ -233,7 +235,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Wflow: generate forcing"
+    "## Wflow\n",
+    "\n",
+    "### Generate forcing"
    ]
   },
   {
@@ -384,7 +388,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Wflow: plot forcing"
+    "### Plot forcing"
    ]
   },
   {
@@ -466,7 +470,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## PCRGlobWB: generate forcing"
+    "## PCRGlobWB\n",
+    "\n",
+    "### Generate forcing"
    ]
   },
   {
@@ -592,7 +598,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## PCRGlobWB: plot forcing"
+    "### Plot forcing"
    ]
   },
   {
