--- a/docs/examples/generate_forcing.ipynb
+++ b/docs/examples/generate_forcing.ipynb
@@ -35,7 +35,10 @@
    "source": [
     "## LISFLOOD\n",
     "\n",
-    "### Generate forcing"
+    "### Generate forcing\n",
+    "\n",
+    "Running LISVAP is not implemented yet. Therefore, LISFLOOD forcing data 'e0', 'es0' and 'et0' are not generated.\n",
+    "However, the recipe creates LISVAP input data that can be found in `lisflood_forcing.directory`."
    ]
   },
   {
@@ -57,14 +60,14 @@
       " 'max_parallel_tasks': 1,\n",
       " 'output_dir': PosixPath('/home/sarah/temp/output'),\n",
       " 'output_file_type': 'png',\n",
-      " 'plot_dir': PosixPath('/home/sarah/temp/output/recipe_lisflood_20210712_142055/plots'),\n",
-      " 'preproc_dir': PosixPath('/home/sarah/temp/output/recipe_lisflood_20210712_142055/preproc'),\n",
+      " 'plot_dir': PosixPath('/home/sarah/temp/output/recipe_lisflood_20210713_085251/plots'),\n",
+      " 'preproc_dir': PosixPath('/home/sarah/temp/output/recipe_lisflood_20210713_085251/preproc'),\n",
       " 'profile_diagnostic': False,\n",
       " 'remove_preproc_dir': True,\n",
       " 'rootpath': {'OBS6': [PosixPath('/home/sarah/temp/ForRecipe')]},\n",
-      " 'run_dir': PosixPath('/home/sarah/temp/output/recipe_lisflood_20210712_142055/run'),\n",
+      " 'run_dir': PosixPath('/home/sarah/temp/output/recipe_lisflood_20210713_085251/run'),\n",
       " 'save_intermediary_cubes': False,\n",
-      " 'work_dir': PosixPath('/home/sarah/temp/output/recipe_lisflood_20210712_142055/work'),\n",
+      " 'work_dir': PosixPath('/home/sarah/temp/output/recipe_lisflood_20210713_085251/work'),\n",
       " 'write_netcdf': True,\n",
       " 'write_plots': True}\n",
       "Creating tasks from recipe\n",
@@ -74,78 +77,79 @@
       "Using input files for variable pr of dataset ERA5:\n",
       "/home/sarah/temp/ForRecipe/Tier3/ERA5/OBS6_ERA5_reanaly_1_day_pr_1990-1990.nc\n",
       "PreprocessingTask diagnostic_daily/pr created. It will create the files:\n",
-      "/home/sarah/temp/output/recipe_lisflood_20210712_142055/preproc/diagnostic_daily/pr/OBS6_ERA5_reanaly_1_day_pr_1990-1990.nc\n",
+      "/home/sarah/temp/output/recipe_lisflood_20210713_085251/preproc/diagnostic_daily/pr/OBS6_ERA5_reanaly_1_day_pr_1990-1990.nc\n",
       "Creating preprocessor task diagnostic_daily/tas\n",
       "Creating preprocessor 'daily_temperature' task for variable 'tas'\n",
       "Using input files for variable tas of dataset ERA5:\n",
       "/home/sarah/temp/ForRecipe/Tier3/ERA5/OBS6_ERA5_reanaly_1_day_tas_1990-1990.nc\n",
       "PreprocessingTask diagnostic_daily/tas created. It will create the files:\n",
-      "/home/sarah/temp/output/recipe_lisflood_20210712_142055/preproc/diagnostic_daily/tas/OBS6_ERA5_reanaly_1_day_tas_1990-1990.nc\n",
+      "/home/sarah/temp/output/recipe_lisflood_20210713_085251/preproc/diagnostic_daily/tas/OBS6_ERA5_reanaly_1_day_tas_1990-1990.nc\n",
       "Creating preprocessor task diagnostic_daily/tasmax\n",
       "Creating preprocessor 'daily_temperature' task for variable 'tasmax'\n",
       "Using input files for variable tasmax of dataset ERA5:\n",
       "/home/sarah/temp/ForRecipe/Tier3/ERA5/OBS6_ERA5_reanaly_1_day_tasmax_1990-1990.nc\n",
       "PreprocessingTask diagnostic_daily/tasmax created. It will create the files:\n",
-      "/home/sarah/temp/output/recipe_lisflood_20210712_142055/preproc/diagnostic_daily/tasmax/OBS6_ERA5_reanaly_1_day_tasmax_1990-1990.nc\n",
+      "/home/sarah/temp/output/recipe_lisflood_20210713_085251/preproc/diagnostic_daily/tasmax/OBS6_ERA5_reanaly_1_day_tasmax_1990-1990.nc\n",
       "Creating preprocessor task diagnostic_daily/tasmin\n",
       "Creating preprocessor 'daily_temperature' task for variable 'tasmin'\n",
       "Using input files for variable tasmin of dataset ERA5:\n",
       "/home/sarah/temp/ForRecipe/Tier3/ERA5/OBS6_ERA5_reanaly_1_day_tasmin_1990-1990.nc\n",
       "PreprocessingTask diagnostic_daily/tasmin created. It will create the files:\n",
-      "/home/sarah/temp/output/recipe_lisflood_20210712_142055/preproc/diagnostic_daily/tasmin/OBS6_ERA5_reanaly_1_day_tasmin_1990-1990.nc\n",
+      "/home/sarah/temp/output/recipe_lisflood_20210713_085251/preproc/diagnostic_daily/tasmin/OBS6_ERA5_reanaly_1_day_tasmin_1990-1990.nc\n",
       "Creating preprocessor task diagnostic_daily/tdps\n",
       "Creating preprocessor 'daily_temperature' task for variable 'tdps'\n",
       "Using input files for variable tdps of dataset ERA5:\n",
       "/home/sarah/temp/ForRecipe/Tier3/ERA5/OBS6_ERA5_reanaly_1_Eday_tdps_1990-1990.nc\n",
       "PreprocessingTask diagnostic_daily/tdps created. It will create the files:\n",
-      "/home/sarah/temp/output/recipe_lisflood_20210712_142055/preproc/diagnostic_daily/tdps/OBS6_ERA5_reanaly_1_Eday_tdps_1990-1990.nc\n",
+      "/home/sarah/temp/output/recipe_lisflood_20210713_085251/preproc/diagnostic_daily/tdps/OBS6_ERA5_reanaly_1_Eday_tdps_1990-1990.nc\n",
       "Creating preprocessor task diagnostic_daily/uas\n",
       "Creating preprocessor 'daily_windspeed' task for variable 'uas'\n",
       "Using input files for variable uas of dataset ERA5:\n",
       "/home/sarah/temp/ForRecipe/Tier3/ERA5/OBS6_ERA5_reanaly_1_day_uas_1990-1990.nc\n",
       "PreprocessingTask diagnostic_daily/uas created. It will create the files:\n",
-      "/home/sarah/temp/output/recipe_lisflood_20210712_142055/preproc/diagnostic_daily/uas/OBS6_ERA5_reanaly_1_day_uas_1990-1990.nc\n",
+      "/home/sarah/temp/output/recipe_lisflood_20210713_085251/preproc/diagnostic_daily/uas/OBS6_ERA5_reanaly_1_day_uas_1990-1990.nc\n",
       "Creating preprocessor task diagnostic_daily/vas\n",
       "Creating preprocessor 'daily_windspeed' task for variable 'vas'\n",
       "Using input files for variable vas of dataset ERA5:\n",
       "/home/sarah/temp/ForRecipe/Tier3/ERA5/OBS6_ERA5_reanaly_1_day_vas_1990-1990.nc\n",
       "PreprocessingTask diagnostic_daily/vas created. It will create the files:\n",
-      "/home/sarah/temp/output/recipe_lisflood_20210712_142055/preproc/diagnostic_daily/vas/OBS6_ERA5_reanaly_1_day_vas_1990-1990.nc\n",
+      "/home/sarah/temp/output/recipe_lisflood_20210713_085251/preproc/diagnostic_daily/vas/OBS6_ERA5_reanaly_1_day_vas_1990-1990.nc\n",
       "Creating preprocessor task diagnostic_daily/rsds\n",
       "Creating preprocessor 'daily_radiation' task for variable 'rsds'\n",
       "Using input files for variable rsds of dataset ERA5:\n",
       "/home/sarah/temp/ForRecipe/Tier3/ERA5/OBS6_ERA5_reanaly_1_day_rsds_1990-1990.nc\n",
       "PreprocessingTask diagnostic_daily/rsds created. It will create the files:\n",
-      "/home/sarah/temp/output/recipe_lisflood_20210712_142055/preproc/diagnostic_daily/rsds/OBS6_ERA5_reanaly_1_day_rsds_1990-1990.nc\n",
+      "/home/sarah/temp/output/recipe_lisflood_20210713_085251/preproc/diagnostic_daily/rsds/OBS6_ERA5_reanaly_1_day_rsds_1990-1990.nc\n",
       "Creating diagnostic task diagnostic_daily/script\n",
-      "These tasks will be executed: diagnostic_daily/script, diagnostic_daily/pr, diagnostic_daily/uas, diagnostic_daily/tasmin, diagnostic_daily/tdps, diagnostic_daily/rsds, diagnostic_daily/vas, diagnostic_daily/tas, diagnostic_daily/tasmax\n",
+      "These tasks will be executed: diagnostic_daily/pr, diagnostic_daily/tdps, diagnostic_daily/tas, diagnostic_daily/tasmax, diagnostic_daily/uas, diagnostic_daily/vas, diagnostic_daily/script, diagnostic_daily/tasmin, diagnostic_daily/rsds\n",
       "Running 9 tasks sequentially\n",
-      "Starting task diagnostic_daily/pr in process [63279]\n",
-      "Successfully completed task diagnostic_daily/pr (priority 0) in 0:01:12.239654\n",
-      "Starting task diagnostic_daily/tas in process [63279]\n",
-      "Successfully completed task diagnostic_daily/tas (priority 1) in 0:01:14.482771\n",
-      "Starting task diagnostic_daily/tasmax in process [63279]\n",
-      "Successfully completed task diagnostic_daily/tasmax (priority 2) in 0:01:15.707844\n",
-      "Starting task diagnostic_daily/tasmin in process [63279]\n",
-      "Successfully completed task diagnostic_daily/tasmin (priority 3) in 0:01:15.811295\n",
-      "Starting task diagnostic_daily/tdps in process [63279]\n",
-      "Successfully completed task diagnostic_daily/tdps (priority 4) in 0:01:14.928907\n",
-      "Starting task diagnostic_daily/uas in process [63279]\n",
-      "Successfully completed task diagnostic_daily/uas (priority 5) in 0:01:16.359529\n",
-      "Starting task diagnostic_daily/vas in process [63279]\n",
-      "Successfully completed task diagnostic_daily/vas (priority 6) in 0:01:13.377937\n",
-      "Starting task diagnostic_daily/rsds in process [63279]\n",
-      "Successfully completed task diagnostic_daily/rsds (priority 7) in 0:01:14.041671\n",
-      "Starting task diagnostic_daily/script in process [63279]\n",
-      "Running command ['/home/sarah/anaconda3/envs/ewatercycle/bin/python', '/home/sarah/anaconda3/envs/ewatercycle/lib/python3.9/site-packages/esmvaltool/diag_scripts/hydrology/lisflood.py', '/home/sarah/temp/output/recipe_lisflood_20210712_142055/run/diagnostic_daily/script/settings.yml']\n",
-      "Writing output to /home/sarah/temp/output/recipe_lisflood_20210712_142055/work/diagnostic_daily/script\n",
-      "Writing plots to /home/sarah/temp/output/recipe_lisflood_20210712_142055/plots/diagnostic_daily/script\n",
-      "Writing log to /home/sarah/temp/output/recipe_lisflood_20210712_142055/run/diagnostic_daily/script/log.txt\n",
+      "Starting task diagnostic_daily/pr in process [10000]\n",
+      "Successfully completed task diagnostic_daily/pr (priority 0) in 0:02:41.428994\n",
+      "Starting task diagnostic_daily/tas in process [10000]\n",
+      "Successfully completed task diagnostic_daily/tas (priority 1) in 0:02:42.251763\n",
+      "Starting task diagnostic_daily/tasmax in process [10000]\n",
+      "Successfully completed task diagnostic_daily/tasmax (priority 2) in 0:02:39.130714\n",
+      "Starting task diagnostic_daily/tasmin in process [10000]\n",
+      "Successfully completed task diagnostic_daily/tasmin (priority 3) in 0:02:25.763929\n",
+      "Starting task diagnostic_daily/tdps in process [10000]\n",
+      "Successfully completed task diagnostic_daily/tdps (priority 4) in 0:02:19.575083\n",
+      "Starting task diagnostic_daily/uas in process [10000]\n",
+      "Successfully completed task diagnostic_daily/uas (priority 5) in 0:02:14.452672\n",
+      "Starting task diagnostic_daily/vas in process [10000]\n",
+      "Successfully completed task diagnostic_daily/vas (priority 6) in 0:02:17.096975\n",
+      "Starting task diagnostic_daily/rsds in process [10000]\n",
+      "Successfully completed task diagnostic_daily/rsds (priority 7) in 0:02:18.051991\n",
+      "Starting task diagnostic_daily/script in process [10000]\n",
+      "Running command ['/home/sarah/anaconda3/envs/ewatercycle/bin/python', '/home/sarah/anaconda3/envs/ewatercycle/lib/python3.9/site-packages/esmvaltool/diag_scripts/hydrology/lisflood.py', '/home/sarah/temp/output/recipe_lisflood_20210713_085251/run/diagnostic_daily/script/settings.yml']\n",
+      "Writing output to /home/sarah/temp/output/recipe_lisflood_20210713_085251/work/diagnostic_daily/script\n",
+      "Writing plots to /home/sarah/temp/output/recipe_lisflood_20210713_085251/plots/diagnostic_daily/script\n",
+      "Writing log to /home/sarah/temp/output/recipe_lisflood_20210713_085251/run/diagnostic_daily/script/log.txt\n",
       "To re-run this diagnostic script, run:\n",
-      "cd /home/sarah/temp/output/recipe_lisflood_20210712_142055/run/diagnostic_daily/script; MPLBACKEND=\"Agg\" /home/sarah/anaconda3/envs/ewatercycle/bin/python /home/sarah/anaconda3/envs/ewatercycle/lib/python3.9/site-packages/esmvaltool/diag_scripts/hydrology/lisflood.py /home/sarah/temp/output/recipe_lisflood_20210712_142055/run/diagnostic_daily/script/settings.yml\n",
+      "cd /home/sarah/temp/output/recipe_lisflood_20210713_085251/run/diagnostic_daily/script; MPLBACKEND=\"Agg\" /home/sarah/anaconda3/envs/ewatercycle/bin/python /home/sarah/anaconda3/envs/ewatercycle/lib/python3.9/site-packages/esmvaltool/diag_scripts/hydrology/lisflood.py /home/sarah/temp/output/recipe_lisflood_20210713_085251/run/diagnostic_daily/script/settings.yml\n",
       "Maximum memory used (estimate): 0.2 GB\n",
       "Sampled every second. It may be inaccurate if short but high spikes in memory consumption occur.\n",
-      "Successfully completed task diagnostic_daily/script (priority 8) in 0:00:04.747203\n"
+      "Successfully completed task diagnostic_daily/script (priority 8) in 0:00:09.731919\n",
+      "The run_lisvap is False. Therefore, LISFLOOD forcing data 'e0', 'es0' and 'et0' are not generated. However, the recipe creates LISVAP input data that can be found in /home/sarah/temp/output/recipe_lisflood_20210713_085251/work/diagnostic_daily/script.\n"
      ]
     }
    ],
@@ -154,7 +158,7 @@
     "lisflood_forcing = ewatercycle.forcing.generate(\n",
     "    target_model='lisflood', \n",
     "    dataset='ERA5', \n",
-    "    start_time='1990-01-01T00:00:00Z', \n",
+    "    start_time='1990-01-01T00:00:00Z',\n",
     "    end_time='1990-12-31T00:00:00Z', \n",
     "    shape='./data/Rhine/Rhine.shp',\n",
     ")"
@@ -173,7 +177,7 @@
       "-------------------\n",
       "start_time=1990-01-01T00:00:00Z\n",
       "end_time=1990-12-31T00:00:00Z\n",
-      "directory=/home/sarah/temp/output/recipe_lisflood_20210712_142055/work/diagnostic_daily/script\n",
+      "directory=/home/sarah/temp/output/recipe_lisflood_20210713_085251/work/diagnostic_daily/script\n",
       "shape=None\n",
       "PrefixPrecipitation=lisflood_ERA5_Rhine_pr_1990_1990.nc\n",
       "PrefixTavg=lisflood_ERA5_Rhine_tas_1990_1990.nc\n",
@@ -196,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
