revise minor things in text

--- a/docs/examples/lisflood.ipynb
+++ b/docs/examples/lisflood.ipynb
@@ -48,7 +48,7 @@
     "\n",
     "For this example noetbook, lisflood_ERA-Interim_*_1990_1990.nc data are copied \n",
     "from `/projects/0/wtrcycle/comparison/forcing/lisflood` to `/scratch/shared/ewatercycle/lisflood_example/lisflood_forcing_data`.\n",
-    "Also the lisvap output files 'e0', 'es0' and 'et0' are generated and store in the same directory."
+    "Also the lisvap output files 'e0', 'es0' and 'et0' are generated and stored in the same directory."
    ]
   },
   {
@@ -371,7 +371,7 @@
    "id": "80d7c751-74a4-4057-ac04-15bc216e131f",
    "metadata": {},
    "source": [
-    "Store simulated values at one location until model end time."
+    "Store simulated values at one target location until model end time."
    ]
   },
   {
@@ -420,13 +420,13 @@
    "source": [
     "target_longitude = [-71.35]\n",
     "target_latitude = [42.64]\n",
-    "discharge_at_one_location = []\n",
+    "target_discharge = []\n",
     "time_range = []\n",
     "end_time = model.end_time\n",
     "\n",
     "while (model.time < end_time):\n",
     "    model.update()\n",
-    "    discharge_at_one_location.append(model.get_value_at_coords('Discharge', lon=target_longitude, lat=target_latitude)[0])\n",
+    "    target_discharge.append(model.get_value_at_coords('Discharge', lon=target_longitude, lat=target_latitude)[0])\n",
     "    time_range.append(model.time_as_datetime.date())\n",
     "    print(model.time_as_isostr)"
    ]
@@ -497,10 +497,10 @@
     }
    ],
    "source": [
-    "simulated_discharge_at_one_location = pd.DataFrame(\n",
-    "    {'simulation': discharge_at_one_location}, index=pd.to_datetime(time_range)\n",
+    "simulated_target_discharge = pd.DataFrame(\n",
+    "    {'simulation': target_discharge}, index=pd.to_datetime(time_range)\n",
     ")\n",
-    "simulated_discharge_at_one_location.plot(figsize=(12, 8))"
+    "simulated_target_discharge.plot(figsize=(12, 8))"
    ]
   },
   {
@@ -539,19 +539,11 @@
     "    dict(longitude=lc[(lc > -73) & (lc < -70)], latitude=la[(la > 42) & (la < 45)])].plot(robust=True, cmap='GnBu', figsize=(12, 8))\n",
     "discharge_map.axes.scatter(target_longitude, target_latitude, s=250, c='r', marker='x', lw=2)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "08c5af6d-782e-429a-9b91-4391ca896f9b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -565,7 +557,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
